templates: auth templates ovewrite

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,7 +8,7 @@
   <div class="col-12 col-md-8 col-lg-6">
     <div class="card shadow-sm">
       <div class="card-header bg-primary text-white text-center">
-        <h2 class="mb-0">{% trans "Создать аккаунт" %}</h2>
+        <h2 class="mb-0">{% trans "Create account" %}</h2>
       </div>
 
       <div class="card-body">
@@ -73,7 +73,7 @@
             <div class="col-sm-4"></div>
             <div class="col-sm-8">
               <div class="d-grid">
-                <button type="submit" class="btn btn-primary btn-lg">{% trans "Создать аккаунт" %}</button>
+                <button type="submit" class="btn btn-primary btn-lg">{% trans "Create account" %}</button>
               </div>
             </div>
           </div>
@@ -82,8 +82,8 @@
 
       <div class="card-footer text-center">
         <small class="text-muted">
-          {% trans "Уже есть аккаунт?" %}&nbsp;
-          <a href="{% url 'account_login' %}" class="text-decoration-none">{% trans "Войти" %}</a>
+          {% trans "Already have a account?" %}&nbsp;
+          <a href="{% url 'account_login' %}" class="text-decoration-none">{% trans "Login" %}</a>
         </small>
       </div>
     </div>
