--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,11 +9,18 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
+
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link {% if request.resolver_match.url_name == 'main' %}active{% endif %}"
              href="{% url 'core:main' %}">
             Home
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if request.resolver_match.url_name == 'list' %}active{% endif %}"
+             href="{% url 'posts:list' %}">
+            Posts
           </a>
         </li>
       </ul>
@@ -40,6 +47,7 @@
           </li>
         {% endif %}
       </ul>
+
     </div>
   </div>
 </nav>
