feature: realised user posts page

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -23,6 +23,12 @@
             Posts
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link {% if request.resolver_match.url_name == 'users_posts' %}active{% endif %}"
+             href="{% url 'posts:user_posts' %}">
+            My Posts
+          </a>
+        </li>
       </ul>
 
       <ul class="navbar-nav ms-auto">
